    - Fixed comment/uncomment procedure (last line in selected text)
    - Fixed error with save new (untitled) file

01/08/2022
    - Added inserting base64 encoded image
    - Added read the file structure and inserting into tree
    - Added GUI font, and GUI foreground color setting
    - Added tcl and go files images
    - Added image for file type (extention)

03/08/2022
    - Added some files icon
    - Fix finded procedure (function) (tree click)
    - Fix showing position in statusbar 

12/08/2022
    - Fixed comment/uncomment procedure depending on the file type
    - Added About dialog
    - Fixed read structure (procedure names like Proc:Name)
    
15/08/2022
    - Added open/close braces highlight
    - Fixed GO structure reader

16/08/2022
    - Added selection of all words in the text by clicking on the any word
    
17/08/2022
    - Added "Vew Panel" menu and "Panel side" (left/right)
    - Changed standard Tk menu on TTK::menu
    - Added config options filesPanelPlace (left/right)
    - Fixed ViewFilesTree procedure with rigth variable filesPanelShow (true/false)

22/08/2022
    - Fixed clicking on proc or func names into tree if file was closed

23/08/2022
    - Added procedure and function navigation window by Ctrl+j pressed on editor
    - Fixed correctly focused on editor text widget

24/08/2022
    - Fixed ReadStructure procedure (added lexer)

25/08/2022
    - Fixed focus on the editor window after clicking Escape in the function selection dialog
    - Change color scheme for FindFunction dialog
    - Added sh icon (for shell scripts)
    - Fixed lexers for find procedures and functions

26/08/2022
    - Update image library (added some icons)
    - Added hot keys:
        - Alt+p - Show/Hide additional panel
        - Alt+w - delete word on the cursor below
        - Alt+r - delete row
        - Alt+b - delete text beetween line Begin and cursor
        - Alt+e - delete text between cursor and line End
    - Fix close braces indent
