@@ -19,8 +19,11 @@
 ::msgcat::mcset ru "Braces foreground" "Цвет скобки"
 ::msgcat::mcset ru "Cancel" "Отмена"
 ::msgcat::mcset ru "Can't found file:" "Не найден файл:"
+::msgcat::mcset ru "Char" "Символ"
 ::msgcat::mcset ru "Close" "Закрыть"
 ::msgcat::mcset ru "Close all" "Закрыть все"
+::msgcat::mcset ru "Close file" "Закрыть файл"
+::msgcat::mcset ru "Close folder" "Закрыть папку"
 ::msgcat::mcset ru "Close Project Manager?" "Выйти из программы?"
 ::msgcat::mcset ru "Comments" "Коментарии"
 ::msgcat::mcset ru "Comment selected" "Закоментировать"
@@ -113,6 +116,7 @@
 ::msgcat::mcset ru "New project" "Новый проект"
 ::msgcat::mcset ru "Not implemented yet" "Данная функция пока не реализована"
 ::msgcat::mcset ru "Not found active project" "Не определен активный проект"
+::msgcat::mcset ru "None" "Нет"
 ::msgcat::mcset ru "No" "Нет"
 ::msgcat::mcset ru "Open" "Открыть"
 ::msgcat::mcset ru "Open file" "Открыть файл"
@@ -193,6 +197,7 @@
 ::msgcat::mcset ru "View line numbers" "Показывать номера строк"
 ::msgcat::mcset ru "Warning" "Внимание"
 ::msgcat::mcset ru "Was replacement" "Было заменено"
-::msgcat::mcset ru "Word wrapping" "Перенос слов"
+::msgcat::mcset ru "Word" "Слово"
+::msgcat::mcset ru "Editors word wrapping" "Перенос слов в редакторе"
 ::msgcat::mcset ru "Work dir" "Рабочий каталог"
 ::msgcat::mcset ru "Yes" "Да"
