@@ -10,7 +10,7 @@ exec wish "$0" -- "$@"
 ######################################################
 # Version: 2.0.0
 # Release: alpha
-# Build: 26082022165531
+# Build: 30082022164258
 ######################################################
 
 # определим текущую версию, релиз и т.д.
